backend/gramatica/.antlr/ReactParser.java
// Generated from d:\Windows\Escritorio\UNAL\Lenguajes\Proyecto\gramatica\React.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ReactParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMA=1, COMILLA1=2, COMILLA2=3, IMPORT=4, CORCHETE_IZQ=5, CORCHETE_DER=6, 
		FROM=7, PUNTO_COMA=8, SALTO=9, FUNCTION=10, PAR_IZQ=11, PAR_DER=12, RETURN=13, 
		OPEN_TAG=14, CLOSE_TAG=15, SLASH=16, EXPORT=17, IGUAL=18, NULL=19, TRUE=20, 
		FALSE=21, PUNTO=22, PROPTYPES=23, PROPTYPESCLASS=24, DOS_PUNTOS=25, ARRAY=26, 
		BOOL=27, FUNC=28, NUMBER=29, OBJECT=30, STRING_TYPE=31, SYMBOL=32, ID=33, 
		STRING=34, INTEGER=35;
	public static final int
		RULE_program = 0, RULE_program_body = 1, RULE_import_statement = 2, RULE_id_list = 3, 
		RULE_more_id = 4, RULE_functionR = 5, RULE_func_body = 6, RULE_html_elements = 7, 
		RULE_html_short_element = 8, RULE_props = 9, RULE_more_props = 10, RULE_possible_assign = 11, 
		RULE_literal = 12, RULE_value_html_tag = 13, RULE_adding_proptypes = 14, 
		RULE_expr = 15, RULE_prop_types_body = 16, RULE_types_of_proptypes = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "program_body", "import_statement", "id_list", "more_id", 
			"functionR", "func_body", "html_elements", "html_short_element", "props", 
			"more_props", "possible_assign", "literal", "value_html_tag", "adding_proptypes", 
			"expr", "prop_types_body", "types_of_proptypes"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'''", "'\"'", "'import'", "'{'", "'}'", "'from'", "';'", 
			"'\n'", "'function'", "'('", "')'", "'return'", "'<'", "'>'", "'/'", 
			"'export'", "'='", "'null'", "'true'", "'false'", "'.'", "'propTypes'", 
			"'PropTypes'", "':'", "'array'", "'bool'", "'func'", "'number'", "'object'", 
			"'string'", "'symbol'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMA", "COMILLA1", "COMILLA2", "IMPORT", "CORCHETE_IZQ", "CORCHETE_DER", 
			"FROM", "PUNTO_COMA", "SALTO", "FUNCTION", "PAR_IZQ", "PAR_DER", "RETURN", 
			"OPEN_TAG", "CLOSE_TAG", "SLASH", "EXPORT", "IGUAL", "NULL", "TRUE", 
			"FALSE", "PUNTO", "PROPTYPES", "PROPTYPESCLASS", "DOS_PUNTOS", "ARRAY", 
			"BOOL", "FUNC", "NUMBER", "OBJECT", "STRING_TYPE", "SYMBOL", "ID", "STRING", 
			"INTEGER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "React.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ReactParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ReactParser.EOF, 0); }
		public List<Program_bodyContext> program_body() {
			return getRuleContexts(Program_bodyContext.class);
		}
		public Program_bodyContext program_body(int i) {
			return getRuleContext(Program_bodyContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IMPORT) | (1L << FUNCTION) | (1L << ID))) != 0)) {
				{
				{
				setState(36);
				program_body();
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(42);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_bodyContext extends ParserRuleContext {
		public Import_statementContext import_statement() {
			return getRuleContext(Import_statementContext.class,0);
		}
		public FunctionRContext functionR() {
			return getRuleContext(FunctionRContext.class,0);
		}
		public Adding_proptypesContext adding_proptypes() {
			return getRuleContext(Adding_proptypesContext.class,0);
		}
		public Program_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_body; }
	}

	public final Program_bodyContext program_body() throws RecognitionException {
		Program_bodyContext _localctx = new Program_bodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IMPORT:
				{
				setState(44);
				import_statement();
				}
				break;
			case FUNCTION:
				{
				setState(45);
				functionR();
				}
				break;
			case ID:
				{
				setState(46);
				adding_proptypes();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_statementContext extends ParserRuleContext {
		public Import_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_statement; }
	 
		public Import_statementContext() { }
		public void copyFrom(Import_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Id_importContext extends Import_statementContext {
		public TerminalNode IMPORT() { return getToken(ReactParser.IMPORT, 0); }
		public TerminalNode ID() { return getToken(ReactParser.ID, 0); }
		public TerminalNode FROM() { return getToken(ReactParser.FROM, 0); }
		public TerminalNode STRING() { return getToken(ReactParser.STRING, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(ReactParser.PUNTO_COMA, 0); }
		public TerminalNode COMA() { return getToken(ReactParser.COMA, 0); }
		public TerminalNode CORCHETE_IZQ() { return getToken(ReactParser.CORCHETE_IZQ, 0); }
		public Id_listContext id_list() {
			return getRuleContext(Id_listContext.class,0);
		}
		public TerminalNode CORCHETE_DER() { return getToken(ReactParser.CORCHETE_DER, 0); }
		public TerminalNode SALTO() { return getToken(ReactParser.SALTO, 0); }
		public Id_importContext(Import_statementContext ctx) { copyFrom(ctx); }
	}
	public static class No_id_importContext extends Import_statementContext {
		public TerminalNode IMPORT() { return getToken(ReactParser.IMPORT, 0); }
		public TerminalNode CORCHETE_IZQ() { return getToken(ReactParser.CORCHETE_IZQ, 0); }
		public Id_listContext id_list() {
			return getRuleContext(Id_listContext.class,0);
		}
		public TerminalNode CORCHETE_DER() { return getToken(ReactParser.CORCHETE_DER, 0); }
		public TerminalNode FROM() { return getToken(ReactParser.FROM, 0); }
		public TerminalNode STRING() { return getToken(ReactParser.STRING, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(ReactParser.PUNTO_COMA, 0); }
		public TerminalNode SALTO() { return getToken(ReactParser.SALTO, 0); }
		public No_id_importContext(Import_statementContext ctx) { copyFrom(ctx); }
	}

	public final Import_statementContext import_statement() throws RecognitionException {
		Import_statementContext _localctx = new Import_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_import_statement);
		int _la;
		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new No_id_importContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				match(IMPORT);
				setState(50);
				match(CORCHETE_IZQ);
				setState(51);
				id_list();
				setState(52);
				match(CORCHETE_DER);
				setState(53);
				match(FROM);
				setState(54);
				match(STRING);
				setState(55);
				match(PUNTO_COMA);
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SALTO) {
					{
					setState(56);
					match(SALTO);
					}
				}

				}
				break;
			case 2:
				_localctx = new Id_importContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				match(IMPORT);
				setState(60);
				match(ID);
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMA) {
					{
					setState(61);
					match(COMA);
					setState(62);
					match(CORCHETE_IZQ);
					setState(63);
					id_list();
					setState(64);
					match(CORCHETE_DER);
					}
				}

				setState(68);
				match(FROM);
				setState(69);
				match(STRING);
				setState(70);
				match(PUNTO_COMA);
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SALTO) {
					{
					setState(71);
					match(SALTO);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Id_listContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ReactParser.ID, 0); }
		public List<More_idContext> more_id() {
			return getRuleContexts(More_idContext.class);
		}
		public More_idContext more_id(int i) {
			return getRuleContext(More_idContext.class,i);
		}
		public Id_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_list; }
	}

	public final Id_listContext id_list() throws RecognitionException {
		Id_listContext _localctx = new Id_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_id_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(ID);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(77);
				more_id();
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class More_idContext extends ParserRuleContext {
		public TerminalNode COMA() { return getToken(ReactParser.COMA, 0); }
		public TerminalNode ID() { return getToken(ReactParser.ID, 0); }
		public List<More_idContext> more_id() {
			return getRuleContexts(More_idContext.class);
		}
		public More_idContext more_id(int i) {
			return getRuleContext(More_idContext.class,i);
		}
		public More_idContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_more_id; }
	}

	public final More_idContext more_id() throws RecognitionException {
		More_idContext _localctx = new More_idContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_more_id);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(COMA);
			setState(84);
			match(ID);
			setState(88);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(85);
					more_id();
					}
					} 
				}
				setState(90);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionRContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(ReactParser.FUNCTION, 0); }
		public TerminalNode ID() { return getToken(ReactParser.ID, 0); }
		public TerminalNode PAR_IZQ() { return getToken(ReactParser.PAR_IZQ, 0); }
		public Id_listContext id_list() {
			return getRuleContext(Id_listContext.class,0);
		}
		public TerminalNode PAR_DER() { return getToken(ReactParser.PAR_DER, 0); }
		public TerminalNode CORCHETE_IZQ() { return getToken(ReactParser.CORCHETE_IZQ, 0); }
		public Func_bodyContext func_body() {
			return getRuleContext(Func_bodyContext.class,0);
		}
		public TerminalNode CORCHETE_DER() { return getToken(ReactParser.CORCHETE_DER, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(ReactParser.PUNTO_COMA, 0); }
		public List<TerminalNode> SALTO() { return getTokens(ReactParser.SALTO); }
		public TerminalNode SALTO(int i) {
			return getToken(ReactParser.SALTO, i);
		}
		public FunctionRContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionR; }
	}

	public final FunctionRContext functionR() throws RecognitionException {
		FunctionRContext _localctx = new FunctionRContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionR);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(FUNCTION);
			setState(92);
			match(ID);
			setState(93);
			match(PAR_IZQ);
			setState(94);
			id_list();
			setState(95);
			match(PAR_DER);
			setState(96);
			match(CORCHETE_IZQ);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SALTO) {
				{
				setState(97);
				match(SALTO);
				}
			}

			setState(100);
			func_body();
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SALTO) {
				{
				setState(101);
				match(SALTO);
				}
			}

			setState(104);
			match(CORCHETE_DER);
			setState(105);
			match(PUNTO_COMA);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SALTO) {
				{
				setState(106);
				match(SALTO);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_bodyContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(ReactParser.RETURN, 0); }
		public TerminalNode PAR_IZQ() { return getToken(ReactParser.PAR_IZQ, 0); }
		public Html_elementsContext html_elements() {
			return getRuleContext(Html_elementsContext.class,0);
		}
		public TerminalNode PAR_DER() { return getToken(ReactParser.PAR_DER, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(ReactParser.PUNTO_COMA, 0); }
		public List<TerminalNode> SALTO() { return getTokens(ReactParser.SALTO); }
		public TerminalNode SALTO(int i) {
			return getToken(ReactParser.SALTO, i);
		}
		public Func_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_body; }
	}

	public final Func_bodyContext func_body() throws RecognitionException {
		Func_bodyContext _localctx = new Func_bodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_func_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(RETURN);
			setState(110);
			match(PAR_IZQ);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SALTO) {
				{
				setState(111);
				match(SALTO);
				}
			}

			setState(114);
			html_elements();
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SALTO) {
				{
				setState(115);
				match(SALTO);
				}
			}

			setState(118);
			match(PAR_DER);
			setState(119);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Html_elementsContext extends ParserRuleContext {
		public List<TerminalNode> OPEN_TAG() { return getTokens(ReactParser.OPEN_TAG); }
		public TerminalNode OPEN_TAG(int i) {
			return getToken(ReactParser.OPEN_TAG, i);
		}
		public List<TerminalNode> ID() { return getTokens(ReactParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ReactParser.ID, i);
		}
		public List<TerminalNode> CLOSE_TAG() { return getTokens(ReactParser.CLOSE_TAG); }
		public TerminalNode CLOSE_TAG(int i) {
			return getToken(ReactParser.CLOSE_TAG, i);
		}
		public TerminalNode SLASH() { return getToken(ReactParser.SLASH, 0); }
		public PropsContext props() {
			return getRuleContext(PropsContext.class,0);
		}
		public List<TerminalNode> SALTO() { return getTokens(ReactParser.SALTO); }
		public TerminalNode SALTO(int i) {
			return getToken(ReactParser.SALTO, i);
		}
		public List<Value_html_tagContext> value_html_tag() {
			return getRuleContexts(Value_html_tagContext.class);
		}
		public Value_html_tagContext value_html_tag(int i) {
			return getRuleContext(Value_html_tagContext.class,i);
		}
		public List<Html_elementsContext> html_elements() {
			return getRuleContexts(Html_elementsContext.class);
		}
		public Html_elementsContext html_elements(int i) {
			return getRuleContext(Html_elementsContext.class,i);
		}
		public Html_elementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_html_elements; }
	}

	public final Html_elementsContext html_elements() throws RecognitionException {
		Html_elementsContext _localctx = new Html_elementsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_html_elements);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(OPEN_TAG);
			setState(122);
			match(ID);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(123);
				props();
				}
			}

			setState(126);
			match(CLOSE_TAG);
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(127);
				match(SALTO);
				}
				break;
			}
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(130);
				value_html_tag();
				}
				break;
			}
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				{
				setState(133);
				match(SALTO);
				}
				break;
			}
			setState(139);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(136);
					html_elements();
					}
					} 
				}
				setState(141);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			}
			setState(143);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				{
				setState(142);
				match(SALTO);
				}
				break;
			}
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CORCHETE_IZQ || _la==STRING) {
				{
				setState(145);
				value_html_tag();
				}
			}

			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SALTO) {
				{
				setState(148);
				match(SALTO);
				}
			}

			setState(151);
			match(OPEN_TAG);
			setState(152);
			match(SLASH);
			setState(153);
			match(ID);
			setState(154);
			match(CLOSE_TAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Html_short_elementContext extends ParserRuleContext {
		public TerminalNode OPEN_TAG() { return getToken(ReactParser.OPEN_TAG, 0); }
		public TerminalNode ID() { return getToken(ReactParser.ID, 0); }
		public TerminalNode SLASH() { return getToken(ReactParser.SLASH, 0); }
		public TerminalNode CLOSE_TAG() { return getToken(ReactParser.CLOSE_TAG, 0); }
		public PropsContext props() {
			return getRuleContext(PropsContext.class,0);
		}
		public Html_short_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_html_short_element; }
	}

	public final Html_short_elementContext html_short_element() throws RecognitionException {
		Html_short_elementContext _localctx = new Html_short_elementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_html_short_element);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(OPEN_TAG);
			setState(157);
			match(ID);
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(158);
				props();
				}
			}

			setState(161);
			match(SLASH);
			setState(162);
			match(CLOSE_TAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropsContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ReactParser.ID, 0); }
		public Possible_assignContext possible_assign() {
			return getRuleContext(Possible_assignContext.class,0);
		}
		public More_propsContext more_props() {
			return getRuleContext(More_propsContext.class,0);
		}
		public PropsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_props; }
	}

	public final PropsContext props() throws RecognitionException {
		PropsContext _localctx = new PropsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_props);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(ID);
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IGUAL) {
				{
				setState(165);
				possible_assign();
				}
			}

			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(168);
				more_props();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class More_propsContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ReactParser.ID, 0); }
		public Possible_assignContext possible_assign() {
			return getRuleContext(Possible_assignContext.class,0);
		}
		public More_propsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_more_props; }
	}

	public final More_propsContext more_props() throws RecognitionException {
		More_propsContext _localctx = new More_propsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_more_props);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(ID);
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IGUAL) {
				{
				setState(172);
				possible_assign();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Possible_assignContext extends ParserRuleContext {
		public TerminalNode IGUAL() { return getToken(ReactParser.IGUAL, 0); }
		public TerminalNode CORCHETE_IZQ() { return getToken(ReactParser.CORCHETE_IZQ, 0); }
		public TerminalNode ID() { return getToken(ReactParser.ID, 0); }
		public TerminalNode CORCHETE_DER() { return getToken(ReactParser.CORCHETE_DER, 0); }
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public Possible_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_possible_assign; }
	}

	public final Possible_assignContext possible_assign() throws RecognitionException {
		Possible_assignContext _localctx = new Possible_assignContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_possible_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			match(IGUAL);
			setState(180);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CORCHETE_IZQ:
				{
				setState(176);
				match(CORCHETE_IZQ);
				setState(177);
				match(ID);
				setState(178);
				match(CORCHETE_DER);
				}
				break;
			case NULL:
			case TRUE:
			case FALSE:
			case STRING:
			case INTEGER:
				{
				setState(179);
				literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(ReactParser.STRING, 0); }
		public TerminalNode NULL() { return getToken(ReactParser.NULL, 0); }
		public TerminalNode TRUE() { return getToken(ReactParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(ReactParser.FALSE, 0); }
		public TerminalNode INTEGER() { return getToken(ReactParser.INTEGER, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NULL) | (1L << TRUE) | (1L << FALSE) | (1L << STRING) | (1L << INTEGER))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
